# rock_paper_scissors

./: README.md  face_detection.py  main.py  pyproject.toml  requirements.txt  rps_detect.py
assets/: credits.txt
