[project]
name = "rock-paper-scissors"
version = "0.1.0"
description = "Rock Paper Scissors Game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "pygame-emojis>=0.1.1",
    "ultralytics>=8.3.155",
]
